# openmodeller

./: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  README  README.txt  READMEWIN.txt  autogen.sh  build.bat  configure.ac  description-pak  doCheckInstall.sh  libopenmodeller.spec  libopenmodeller.spec.in  om.pro  openModeller.xsd  settings.pro
src/algorithms/: CMakeLists.txt  Makefile.am  algorithms.pro  aquamaps.cpp  aquamaps.hh  aquamaps.pro  bioclim.cpp  bioclim.hh  bioclim.pro  bioclim_distance.cpp  bioclim_distance.hh  bioclim_distance.pro  bioclim_or.cpp  bioclim_or.hh  csm.cpp  csm.hh  csm.pro  csmbs.cpp  csmbs.hh  csmkg.cpp  csmkg.hh  distance_to_average.cpp  distance_to_average.hh  distance_to_average.pro  envelope_score.cpp  envelope_score.hh  environmental_distance.cpp  environmental_distance.hh  environmental_distance.pro  generictemplate.cpp  generictemplate.hh  matrix.hh  minimum_distance.cpp  minimum_distance.hh  minimum_distance.pro  niche_mosaic.cpp  niche_mosaic.hh  tabu.cpp  tabu.hh  virtual_niche.cpp  (+1 more)
src/algorithms/best_subsets/: AbstractBestSubsets.cpp  AbstractBestSubsets.hh  AlgorithmRun.cpp  CMakeLists.txt  DgGarpBestSubsets.cpp  DgGarpBestSubsets.hh  Makefile.am  best_subsets.pro  threads.hh
src/algorithms/consensus/: CMakeLists.txt  consensus.cpp  consensus.hh
src/algorithms/dg_garp/: CMakeLists.txt  EnvCell.cpp  EnvCell.h  EnvCellSet.h  GarpAlgorithm.cpp  GarpAlgorithm.h  Makefile.am  Rule.cpp  RuleSet.cpp  RuleSet.h  Utilities.cpp  Utilities.h  dg_garp.pro
src/algorithms/enfa/: CMakeLists.txt  diff.txt  enfa.cpp  enfa.hh
src/algorithms/garp/: CMakeLists.txt  Makefile.am  bioclim_histogram.cpp  bioclim_histogram.hh  garp.cpp  garp.hh  garp.pro  garp_alg.pro  regression.cpp  regression.hh  rules_base.cpp  rules_base.hh  rules_logit.cpp  rules_logit.hh  rules_negrange.cpp  rules_negrange.hh  rules_range.cpp  rules_range.hh  ruleset.cpp  ruleset.hh
src/algorithms/maxent/: CMakeLists.txt  Makefile.am  feature.hh  feature_generator.cpp  feature_generator.hh  hinge_feature.cpp  hinge_feature.hh  hinge_generator.cpp  hinge_generator.hh  linear_feature.cpp  linear_feature.hh  maxent.cpp  maximum_entropy.cpp  maximum_entropy.hh  mxfeature.hh  product_feature.cpp  product_feature.hh  quadratic_feature.cpp  quadratic_feature.hh  threshold_feature.cpp  threshold_feature.hh  threshold_generator.cpp  threshold_generator.hh
src/algorithms/neural_networks/: nn.h  nn_alg.cpp  nn_alg.hh
src/algorithms/rf/: CMakeLists.txt  rf_alg.cpp  rf_alg.hh
src/algorithms/svm/: CMakeLists.txt  Makefile.am  svm.cpp  svm_alg.cpp  svm_alg.hh
src/console/: CMakeLists.txt  Makefile.am  console.pro  consolexml.cpp  consolexml.hh  file_parser.cpp  file_parser.hh  makeman.sh  occurrences_file.cpp  occurrences_file.hh  om_algorithm.cpp  om_algorithm.txt  om_cmd_utils.cpp  om_cmd_utils.hh  om_console.cpp  om_console.pro  om_console.txt  om_create  om_create.cpp  om_create.pro  om_dump.cpp  om_evaluate.cpp  om_evaluate.txt  om_layer.cpp  om_layer.txt  om_layer_utils.cpp  om_layer_utils.hh  om_metadump.cpp  om_model.cpp  om_model.txt  om_niche.cpp  om_points.cpp  om_project.cpp  om_project.pro  om_project.txt  om_pseudo.cpp  om_pseudo.txt  om_sampledump.cpp  om_sampler.cpp  om_sampler.txt  (+7 more)
src/console/getopts/: LICENSE  README  getopts.C
src/console/graph/: color.cpp  color.hh  graphic.hh  graphic_x11.cpp  graphic_x11.hh  list.cpp  view_model.cpp  view_model.hh
src/console/man/: om_algorithm.1  om_console.1  om_create.1  om_evaluate.1  om_layer.1  om_model.1  om_niche.1  om_points.1  om_project.1  om_pseudo.1  om_sampler.1  om_test.1  om_viewer.1
src/openmodeller/: AlgMetadata.hh  AlgParameter.cpp  AlgParameter.hh  Algorithm.cpp  Algorithm.hh  AlgorithmFactory.cpp  AlgorithmFactory.hh  AreaStats.cpp  AreaStats.hh  CMakeLists.txt  CacheManager.cpp  CacheManager.hh  CallbackWrapper.cpp  CallbackWrapper.hh  Configurable.hh  Configuration.cpp  Configuration.hh  Configuration_xmlio.cpp  ConfusionMatrix.cpp  ConfusionMatrix.hh  Environment.cpp  Environment.hh  Exceptions.hh  Log.cpp  Log.hh  Makefile.am  MapFormat.cpp  MapFormat.hh  Model.hh  Normalizer.hh  Occurrence.cpp  Occurrence.hh  Occurrences.cpp  Occurrences.hh  OpenModeller.cpp  OpenModeller.hh  Projector.cpp  Projector.hh  Random.cpp  Random.hh  (+29 more)
src/openmodeller/env_io/: GdalRaster.cpp  GdalRaster.hh  GeoTransform.cpp  GeoTransform.hh  Header.cpp  Header.hh  Map.cpp  Map.hh  MapIterator.cpp  MapIterator.hh  Raster.cpp  Raster.hh  RasterFactory.cpp  RasterFactory.hh  RasterGdal.cpp  RasterGdal.hh  RemoteRaster.cpp  RemoteRaster.hh  TeOMRaster.cpp  (+4 more)
src/soap/: CMakeLists.txt  Makefile.am  README  file_parser.hh  om.xsd  om_soap.hh  om_soap_server.cpp  omws.xsd  omwsctl  openModeller.createModel.req.xml  openModeller.getAlgorithms.req.xml  openModeller.getAlgorithms.res.xml  openModeller.getDistributionMap.req.xml  openModeller.getDistributionMap.res.xml  openModeller.getLayerAsAttachment.req.xml  openModeller.getLayerAsAttachment.res.xml  openModeller.getLayerAsUrl.req.xml  openModeller.getLayerAsUrl.res.xml  openModeller.getLayerAsWcs.req.xml  openModeller.getLayerAsWcs.res.xml  openModeller.getLayers.req.xml  openModeller.getLayers.res.xml  openModeller.getLog.req.xml  openModeller.getMapAsUrl.req.xml  openModeller.getMapAsUrl.res.xml  openModeller.getModel.res.xml  openModeller.getProgress.req.xml  openModeller.getProjectionMetadata.res.xml  openModeller.nsmap  openModeller.ping.req.xml  openModeller.ping.res.xml  openModeller.projectModel.res.xml  openModeller.wsdl  sampleClient.pl  scheduler.conf  scheduler.sh  server.conf  soapC.cpp  soapClient.cpp  soapClientLib.cpp  (+7 more)
src/swig/: Makefile.am
test/CppUnitLite/: Makefile.am  TestRegistry.cpp  TestRegistry.h  TestResult.cpp  test_main.cpp
trunk/openmodeller/: AUTHORS  CMakeLists.txt  ChangeLog  DartConfig.cmake  INSTALL  Makefile.am  README  README.txt  READMEWIN.txt  acinclude.m4  am-clean  autogen.sh  build.bat  configure.ac  doCheckInstall.sh  libopenmodeller.spec  libopenmodeller.spec.in  om.pro  openModeller.xsd  openmodeller.spec.in  settings.pro
(+1126 files in other folders)
